name:                eta-jdbc
version:             0.1.0.0
-- synopsis:
description:         Simple example of how to use JDBC from Eta language
-- license:
license-file:        LICENSE
author:              Tatu Tarvainen
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable eta-jdbc
  main-is:             Main.hs
  other-modules:       Jdbc
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  java-sources:        jar/derby.jar java/DB.java